objects/Milestone1_Project__c.object
<CustomObject>
    <description>RIC Plann&apos;R - Workflow OPP &amp; Produits finis</description>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RICAvecMADrepositionnee__c</fullName>
        <formula>IF(ISBLANK(RIC_MAD_Date_Approved__c), &apos;false&apos;, &apos;true&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avec MAD repositionnée</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Alcohol_Percentage__c</fullName>
        <label>Taux d&apos;alcool (% vol.)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RIC_Ancien_code__c</fullName>
        <description>Indiquer le code de la référence venant à être remplacer par la nouvelle création</description>
        <inlineHelpText>Indiquer le code de la référence venant à être remplacer par la nouvelle création.</inlineHelpText>
        <label>Code actuel à remplacer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_AutoNumber__c</fullName>
        <description>Will be used in conjunction with 2 other fields (First3NumberOfProject &amp; Project Number), to give the first three letters of the Project Number</description>
        <displayFormat>{0000}</displayFormat>
        <externalId>true</externalId>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RIC_Benchmark_concurrence__c</fullName>
        <label>Benchmark concurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marque</label>
        <referenceTo>RIC_Brand__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Categorie_fiscale__c</fullName>
        <label>Catégorie fiscale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Circuit_de_distribution__c</fullName>
        <label>Circuit de distribution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>Grossiste</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cavistes</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>B to B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_ClosingRate__c</fullName>
        <formula>IF(RIC_Tous_Actions_En_Retard__c =0,null,((RIC_Tous_Actions_En_Retard__c - Total_Late_Task_Count__c)  / RIC_Tous_Actions_En_Retard__c))</formula>
        <label>taux d&apos;avancement projet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RIC_Code_article__c</fullName>
        <inlineHelpText>Code de l&apos;article principal du projet</inlineHelpText>
        <label>Code article</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Cols_ou_Unites__c</fullName>
        <description>Utilisé dans les modèles d&apos;emails, associé au champ Quantité annuelle prévue</description>
        <formula>CASE(RecordType.DeveloperName,
&quot;RIC_PRF_OPP_ou_Kit_OPP&quot;,&quot;unités&quot;,
&quot;cols&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cols ou Unités</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Commentaires_coordinateurs__c</fullName>
        <label>Commentaires coordinateurs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Consommateur_cible__c</fullName>
        <label>Consommateur cible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Coordinateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinateur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Coutant_cible__c</fullName>
        <label>Coûtant cible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_DDO_Approval__c</fullName>
        <label>Validation DDO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_DNV_Approval__c</fullName>
        <label>Validation DNV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_1er_Production__c</fullName>
        <inlineHelpText>Correspond à la date à laquelle la première production/réception/copack aura lieu.</inlineHelpText>
        <label>Date de 1ère prod/réception</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_Diffusion__c</fullName>
        <description>Alimentée par workflow quand on clique sur Diffuser les Actions</description>
        <label>Date de diffusion des actions</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_MAD_de_la_fiche_produit__c</fullName>
        <inlineHelpText>Renseigner la date souhaitée de mise à disposition de la fiche produit.</inlineHelpText>
        <label>Date MAD de la fiche produit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_MAD_previ__c</fullName>
        <description>Donne la date de MAD selon remplissage des 2 champs de Date de MAD : dermandée ou DDO (donc hors MAD réelle)</description>
        <formula>IF(NOT(ISBLANK(RIC_MAD_Date_Approved__c)),RIC_MAD_Date_Approved__c,
RIC_MAD_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de MAD prévisionnelle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_de_lancement__c</fullName>
        <label>Date de lancement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_de_remiseFicheTechniqueSouhaite__c</fullName>
        <label>Date MAD de la fiche technique souhaitée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_debut_Planning__c</fullName>
        <label>Date début Planning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_du_test__c</fullName>
        <label>Date du test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Description__c</fullName>
        <description>Short descprition about the project</description>
        <label>Descriptif</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Duree_projet__c</fullName>
        <description>Nbre de jours écoulés entre la date de la demande et la date de MAD réelle, DDO ou demandée selon celle des 3 dates de MAD renseignées</description>
        <formula>IF(ISBLANK(RIC_MAD_Date_Real__c), RIC_Date_MAD_previ__c, RIC_MAD_Date_Real__c) -  RIC_Request_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Durée du projet (jrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_EAN_ITF_specifiques__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAN / ITF spécifiques</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Go_Achats__c</fullName>
        <label>GO achats</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demande d&apos;étude non validée</fullName>
                    <default>true</default>
                    <label>Demande d&apos;étude non validée</label>
                </value>
                <value>
                    <fullName>Demande d&apos;étude validée</fullName>
                </value>
                <value>
                    <fullName>GO achats confirmé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Intention_de_nom__c</fullName>
        <label>Intention de nom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Je_suis_coordinateur__c</fullName>
        <description>Utilisé pour les vues pour filtrer sur &quot;les projets que je coordonne&quot;</description>
        <formula>RIC_Coordinateur__r.Id  =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Je suis coordinateur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Kit_ou_OPP__c</fullName>
        <inlineHelpText>Dans le cas d&apos;un Kit OPP, pensez à joindre le fichier annexe pour Kit à la fiche Projet</inlineHelpText>
        <label>Kit ou OPP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit OPP</fullName>
                </value>
                <value>
                    <fullName>OPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Lien_du_projet__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien du projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Lieu__c</fullName>
        <inlineHelpText>Correspond au dépôt sur lequel la première production/importation/copack aura lieu.</inlineHelpText>
        <label>Lieu de 1ère prod/réception</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Link_To_Project__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_320,FIND( &apos;/services&apos;, $Api.Partner_Server_URL_320)) &amp; &quot;/&quot; &amp; Id, Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_Link_To_Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_MAD_Date_Approved__c</fullName>
        <label>Date de MAD validé DDO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_MAD_Date_Real__c</fullName>
        <label>Date de MAD réelle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_MAD_Date__c</fullName>
        <inlineHelpText>Date d&apos;enlèvement</inlineHelpText>
        <label>Date de MAD souhaitée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_MAD_Temps__c</fullName>
        <formula>IF(RIC_MAD_a_temps__c == 1, &apos;Dans le temps&apos;, &apos;En retard&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAD à Temps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_MAD_a_temps__c</fullName>
        <description>Pour compter en reporting les projets dont la MAD est dans les temps</description>
        <formula>IF( RIC_Retard_MAD__c &lt;= 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAD à temps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Marche_cible_pays__c</fullName>
        <label>Marché cible (pays)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Marketing_Approval__c</fullName>
        <label>Validation D MKT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Marquage_Specifique__c</fullName>
        <label>Marquage Spécifique</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Missing_Fields_Page_1_3_4_5__c</fullName>
        <description>This field calculates the missing fields required for Page Layouts 1, 3, 4 &amp; 5</description>
        <formula>IF(ISBLANK(RIC_Packing__c), &quot;Conditionnement, &quot; , null) &amp;
IF(ISBLANK(RIC_Volume__c), &quot;Centilisation, &quot; , null) &amp;
IF(ISBLANK(RIC_Alcohol_Percentage__c), &quot;Taux d&apos;alcool, &quot; , null) &amp;
IF(ISBLANK(RIC_Target_Cost__c), &quot;Coût objectif, &quot; , null) &amp;
IF(AND(ISBLANK(RIC_Circuit_de_distribution__c),RecordType.Name != &apos;International&apos;), &quot;Circuit de distribution, &quot; , null) &amp;
IF(ISBLANK(RIC_Qtes_annuelles_prevues__c), &quot;Volumes annuels prévus, &quot; , null) &amp;
IF(ISBLANK(RIC_MAD_Date__c), &quot;Date de MAD (date d&apos;enlèvement), &quot; , null)</formula>
        <label>RIC Missing Fields Page 1 3 4 5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Missing_Fields_Page_2__c</fullName>
        <description>This field calculates the missing fields required for Page Layout 2</description>
        <formula>IF(ISPICKVAL(RIC_Serie_Limitee__c, &quot;&quot;) = null, &quot;Série limitée ou réf. pérenne ou réf. saisonnière, &quot;, null) &amp;
IF(ISBLANK(RIC_Packing__c), &quot;Conditionnement, &quot; , null) &amp;
IF(ISBLANK(RIC_Volume__c), &quot;Centilisation, &quot; , null) &amp;
IF(ISBLANK(RIC_Alcohol_Percentage__c), &quot;Taux d&apos;alcool, &quot; , null) &amp;
IF(ISBLANK(RIC_Target_Cost__c), &quot;Coût objectif, &quot; , null) &amp;
IF(ISBLANK(RIC_Circuit_de_distribution__c), &quot;Circuit de distribution, &quot; , null) &amp;
IF(ISBLANK(RIC_Qtes_annuelles_prevues__c), &quot;Volumes annuels prévus, &quot; , null) &amp;
IF(ISBLANK(RIC_MAD_Date__c), &quot;Date de MAD (date d&apos;enlèvement)&quot; , null)</formula>
        <label>RIC Missing Fields Page 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Missing_Fields_Page_6__c</fullName>
        <description>This field calculates the missing fields required for Page Layout 6</description>
        <formula>IF(ISNULL(RIC_Target_Cost__c), &quot;Coût objectif, &quot; , null) &amp;

IF(AND(ISBLANK(RIC_Circuit_de_distribution__c),RecordType.Name != &apos;DDO&apos;), &quot;Circuit de distribution, &quot; , null) &amp;

IF(ISBLANK( RIC_Qtes_annuelles_prevues__c), &quot;Volumes annuels prévus, &quot; , null) &amp;

IF(TEXT(RIC_MAD_Date__c) = null, &quot;Date de MAD (date d&apos;enlèvement)&quot; , null)</formula>
        <label>RIC Missing Fields Page 6</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Missing_Fields_Page_7__c</fullName>
        <description>This field calculates the missing fields required for Page Layout Project 7 Innovation</description>
        <formula>IF(ISBLANK(RIC_Alcohol_Percentage__c), &quot;Taux d&apos;alcool, &quot; , null) &amp;
IF(ISBLANK(RIC_Target_Cost__c), &quot;Coût objectif, &quot; , null) &amp; 
IF(ISBLANK(RIC_Representation_graphique__c), &quot;Représentation graphique d&apos;ingrédients, &quot; , null) &amp;
IF(ISBLANK(RIC_Volume_bouteille__c), &quot;Volume bouteille, &quot; , null) &amp;
IF(ISBLANK(RIC_Type_de_revetement__c), &quot;Type de revêtement, &quot; , null) &amp;
IF(ISBLANK(RIC_Type_de_bouchon__c), &quot;Type de bouchon, &quot; , null) &amp;
IF(ISBLANK(RIC_Regroupement_en_pack__c), &quot;Regroupement en pack, &quot; , null) &amp;
IF(ISBLANK(TEXT(RIC_Naturalite_des_ingredients__c)), &quot;Naturalité des ingrédients, &quot; , null) &amp;
IF(ISBLANK(TEXT(RIC_Test_Consommateur__c)), &quot;Test Consommateur réalisé, &quot; , null) &amp;
IF(ISBLANK(TEXT(RIC_Type_de_test__c)), &quot;Type de test, &quot; , null) &amp;
IF(ISBLANK(RIC_Mode_consommation_produit__c), &quot;Mode de consommation du produit, &quot; , null) &amp;
IF(ISBLANK(RIC_Qtes_annuelles_prevues__c), &quot;Volumes annuels prévus, &quot; , null) &amp;
IF(ISBLANK(RIC_Marche_cible_pays__c), &quot;Marché cible (pays), &quot; , null) &amp;
IF(ISBLANK(TEXT(RIC_Mode_de_distribution__c)), &quot;Mode de distribution&quot; , null)</formula>
        <label>RIC Missing Fields Page 7</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Mode_consommation_produit__c</fullName>
        <label>Mode de consommation du produit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Mode_de_distribution__c</fullName>
        <label>Mode de distribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>Hors Do</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Naturalite_des_ingredients__c</fullName>
        <label>Naturalité des ingrédients</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colorants</fullName>
                </value>
                <value>
                    <fullName>Arômes</fullName>
                </value>
                <value>
                    <fullName>Les 2</fullName>
                </value>
                <value>
                    <fullName>Aucun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Nombre_de_phases__c</fullName>
        <label>RIC Nombre de phases</label>
        <summaryForeignKey>Milestone1_Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RIC_OPP_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lien vers OPP</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_OPP_catalogue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP catalogue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Packing__c</fullName>
        <label>Conditionnement</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Pays__c</fullName>
        <label>Pays</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AFRIQUE</fullName>
                </value>
                <value>
                    <fullName>Afrique du Sud</fullName>
                </value>
                <value>
                    <fullName>Albanie</fullName>
                </value>
                <value>
                    <fullName>Algérie</fullName>
                </value>
                <value>
                    <fullName>Allemagne</fullName>
                </value>
                <value>
                    <fullName>Andorre</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctique</fullName>
                </value>
                <value>
                    <fullName>Antigua et Barbuda</fullName>
                </value>
                <value>
                    <fullName>ANTILLES</fullName>
                </value>
                <value>
                    <fullName>ANTILLES NÉERLANDAISES</fullName>
                </value>
                <value>
                    <fullName>Arabie Saoudite</fullName>
                </value>
                <value>
                    <fullName>Argentine</fullName>
                </value>
                <value>
                    <fullName>ARMÉNIE</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australie</fullName>
                </value>
                <value>
                    <fullName>AUTRES AMERIQUE LATINE</fullName>
                </value>
                <value>
                    <fullName>AUTRES ASIE</fullName>
                </value>
                <value>
                    <fullName>AUTRES EUROPE</fullName>
                </value>
                <value>
                    <fullName>Autriche</fullName>
                </value>
                <value>
                    <fullName>AZERBAIDJAN</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahreïn</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbade</fullName>
                </value>
                <value>
                    <fullName>Belgique</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bénin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Planning_complet__c</fullName>
        <formula>HYPERLINK(&quot;./&quot;&amp; $Label.RIC_ID_Rapport_Planning &amp; &quot;?pv0=&quot;&amp;Id  ,&quot;Affichage du planning sous forme de tableau&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning complet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Precision_marquage_specifique__c</fullName>
        <label>Précision marquage spécifique</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Presence_OPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Présence OPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Profil_organoleptique__c</fullName>
        <label>Profil organoleptique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Project_Number__c</fullName>
        <formula>RIC_Brand__r.RIC_Prefixe__c &amp; &apos;-&apos; &amp; RIC_AutoNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projet N°</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Project_Type_Value__c</fullName>
        <formula>TEXT(  RIC_Project_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type de projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Project_Type__c</fullName>
        <label>Type de projet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Road to Market</fullName>
                </value>
                <value>
                    <fullName>DDO</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>OPP ou Kit OPP</fullName>
                </value>
                <value>
                    <fullName>Produit fini Brand Company</fullName>
                </value>
                <value>
                    <fullName>Produit fini standard fabriqué</fullName>
                </value>
                <value>
                    <fullName>Promotion fabriquée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Projet_cloture_a_temps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Le coordinateur uniquement peut cocher cette case</inlineHelpText>
        <label>Projet clôturé à temps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Qtes_annuelles_prevues__c</fullName>
        <inlineHelpText>Exprimées en cols pour les produits finis, en nombre d&apos;unités pour un OPP ou un Kit</inlineHelpText>
        <label>Volumes annuels prévus</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Quantites_valides_Previsions__c</fullName>
        <inlineHelpText>Quantités de cols définitives renseignées par les Prévisions.</inlineHelpText>
        <label>Volumes validés prévisions</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Reference__c</fullName>
        <label>Référence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>à copacker</fullName>
                </value>
                <value>
                    <fullName>de facturation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Refrencement_du_produit__c</fullName>
        <label>Référencement du produit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pérenne</fullName>
                </value>
                <value>
                    <fullName>Série limitée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Regroupement_en_pack__c</fullName>
        <label>Regroupement en pack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Representation_graphique__c</fullName>
        <label>Représentation graphique d&apos;ingrédients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Request_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de la demande</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Requester_Company__c</fullName>
        <description>Company of the project creator/requester.</description>
        <formula>CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Société du demandeur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Requester_Department__c</fullName>
        <description>Department of the project creator/requester.</description>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service du demandeur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Requester_FirstName__c</fullName>
        <description>First name of the project creator/requester.</description>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prénom du demandeur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Requester_LastName__c</fullName>
        <description>Last name of the project creator/requester.</description>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom du demandeur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Retard_MAD__c</fullName>
        <description>Retard de MAD en jours</description>
        <formula>IF(RIC_Projet_cloture_a_temps__c,0,  
IF(ISBLANK(RIC_MAD_Date_Real__c),0,
RIC_MAD_Date_Real__c -  RIC_Date_MAD_previ__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retard MAD (jrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Semaine_de_production__c</fullName>
        <formula>IF(NOT(ISNULL(RIC_Date_1er_Production__c)),
&apos;S&apos;+Text(
IF(MOD( DATE(YEAR(RIC_Date_1er_Production__c), 1, 1) - DATE(1900, 1, 7), 7) == 1,IF( 
CEILING( ( RIC_Date_1er_Production__c - DATE( YEAR( RIC_Date_1er_Production__c), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( RIC_Date_1er_Production__c - DATE( YEAR( RIC_Date_1er_Production__c), 1, 1) + 1) / 7)
),IF( 
CEILING( ( RIC_Date_1er_Production__c - DATE( YEAR( RIC_Date_1er_Production__c), 1, 1) + 1) / 7) &gt; 52,
53,
CEILING( ( RIC_Date_1er_Production__c - DATE( YEAR( RIC_Date_1er_Production__c), 1, 1) + 1) / 7)+1
)
)
)
,&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semaine de production</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Semaine_du_Timing__c</fullName>
        <label>Semaine de MAD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Serie_Limitee__c</fullName>
        <label>Série limitée / Ref Pérenne /Saisonnière</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Série limitée</fullName>
                </value>
                <value>
                    <fullName>Référence pérenne</fullName>
                </value>
                <value>
                    <fullName>Référence saisonnière</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>